@@ -7,7 +7,7 @@
 
 <form>
 	<fields name="passwordless"
-			addfieldprefix="Joomla\Plugin\System\Passwordless\Field">
+			addfieldprefix="Akeeba\Plugin\System\Passwordless\Field">
 		<fieldset name="passwordless"
 			label="PLG_SYSTEM_PASSWORDLESS_HEADER"
 		>
