@@ -15,7 +15,7 @@
     <copyright>Copyright (c)2016-2022 Akeeba Ltd</copyright>
     <license>GNU GPL v3 or later</license>
     <description>PLG_SYSTEM_PASSWORDLESS_DESCRIPTION</description>
-    <namespace path="src">Joomla\Plugin\System\Passwordless</namespace>
+    <namespace path="src">Akeeba\Plugin\System\Passwordless</namespace>
 
     <files>
         <folder>forms</folder>
