@@ -16,10 +16,10 @@ use Joomla\CMS\Plugin\PluginHelper;
 use Joomla\DI\Container;
 use Joomla\DI\ServiceProviderInterface;
 use Joomla\Event\DispatcherInterface;
-use Joomla\Plugin\System\Passwordless\Extension\Passwordless;
-use Joomla\Plugin\System\Passwordless\Authentication;
-use Joomla\Plugin\System\Passwordless\CredentialRepository;
-use Joomla\Plugin\System\Passwordless\MetadataRepository;
+use Akeeba\Plugin\System\Passwordless\Extension\Passwordless;
+use Akeeba\Plugin\System\Passwordless\Authentication;
+use Akeeba\Plugin\System\Passwordless\CredentialRepository;
+use Akeeba\Plugin\System\Passwordless\MetadataRepository;
 use Joomla\Session\SessionInterface;
 use Webauthn\MetadataService\MetadataStatementRepository;
 use Webauthn\PublicKeyCredentialSourceRepository;
