@@ -7,7 +7,7 @@
  * @license         GNU General Public License version 2 or later; see LICENSE.txt
  */
 
-namespace Joomla\Plugin\System\Passwordless;
+namespace Akeeba\Plugin\System\Passwordless;
 
 // Protect from unauthorized access
 defined('_JEXEC') or die();
