@@ -5,7 +5,7 @@
  * @license   GNU General Public License version 3, or later
  */
 
-namespace Joomla\Plugin\System\Passwordless\PluginTraits;
+namespace Akeeba\Plugin\System\Passwordless\PluginTraits;
 
 // Protect from unauthorized access
 defined('_JEXEC') or die();
@@ -22,7 +22,7 @@ use Joomla\CMS\Uri\Uri;
 use Joomla\CMS\User\User;
 use Joomla\CMS\User\UserFactoryInterface;
 use Joomla\Event\Event;
-use Joomla\Plugin\System\Passwordless\CredentialRepository;
+use Akeeba\Plugin\System\Passwordless\CredentialRepository;
 use RuntimeException;
 use function Sodium\add;
 
