@@ -5,7 +5,7 @@
  * @license   GNU General Public License version 3, or later
  */
 
-namespace Joomla\Plugin\System\Passwordless\PluginTraits;
+namespace Akeeba\Plugin\System\Passwordless\PluginTraits;
 
 defined('_JEXEC') || die;
 
